Reduce css size

--- a/src/layouts/partials/header.hbs
+++ b/src/layouts/partials/header.hbs
@@ -1,5 +1,5 @@
 <header class="header">
-	<div class="menu menu--underbar nav-center">
+	<div class="menu menu--underbar">
 		<ul class="menu__list">
 			{{#each site.navigation}}
 				<li class="menu__item" ui-sref-active="menu__item--active">
