--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -3,8 +3,26 @@
 @import 'utils/functions';
 
 // Vendors
-@import 'node_modules/bootstrap/scss/bootstrap-flex';
-
+$enable-flex: true;
+// Core variables and mixins
+@import "node_modules/bootstrap/scss/custom";
+@import "node_modules/bootstrap/scss/variables";
+@import "node_modules/bootstrap/scss/mixins";
+// Reset and dependencies
+@import "node_modules/bootstrap/scss/normalize";
+@import "node_modules/bootstrap/scss/print";
+// Core CSS
+@import "node_modules/bootstrap/scss/reboot";
+@import "node_modules/bootstrap/scss/type";
+@import "node_modules/bootstrap/scss/images";
+@import "node_modules/bootstrap/scss/code";
+@import "node_modules/bootstrap/scss/grid";
+// Components
+@import "node_modules/bootstrap/scss/pagination";
+@import "node_modules/bootstrap/scss/media";
+// Utility classes
+@import "node_modules/bootstrap/scss/utilities";
+// Font Awesome
 @import 'node_modules/font-awesome/scss/font-awesome';
 
 // Custom Vendors
