--- a/src/layouts/partials/footer.hbs
+++ b/src/layouts/partials/footer.hbs
@@ -19,7 +19,7 @@
 
 {{#if scripts}}
 	{{#each scripts}}
-		<script src="/{{this}}"></script>
+		<script async src="/{{this}}"></script>
 	{{/each}}
 {{/if}}
 
