Slim icon set down and inline css.

--- a/src/layouts/partials/footer.hbs
+++ b/src/layouts/partials/footer.hbs
@@ -6,7 +6,7 @@
 					{{#each site.social}}
 						<li class="list-inline-item mx-1">
 							<a class="icon" title="{{title}}" href="{{link}}">
-								<i class="fa {{icon}}"></i>
+								<i class="{{icon}}"></i>
 							</a>
 						</li>
 					{{/each}}
