--- a/src/layouts/partials/head.hbs
+++ b/src/layouts/partials/head.hbs
@@ -15,4 +15,5 @@
 			<link rel="stylesheet" href="/{{this}}" media="all">
 		{{/each}}
 	{{/if}}
+	<style type="text/css"><!-- INLINE assets/css/styles.css --></style>
 </head>
