--- a/src/layouts/projects-index.hbs
+++ b/src/layouts/projects-index.hbs
@@ -28,10 +28,10 @@
 													&nbsp;{{language}}
 												</div>
 												<div class="d-inline mr-1">
-													<i class="fa fa-star"></i> {{stargazers_count}}
+													<i class="icon-star"></i> {{stargazers_count}}
 												</div>
 												<div class="d-inline mr-1">
-													<i class="fa fa-code-fork"></i> {{forks_count}}
+													<i class="icon-fork"></i> {{forks_count}}
 												</div>
 												<div class="d-inline mr-1">
 													Updated <time class="time" datetime="{{moment updated_at "YYYY-MM-DD"}}">{{moment updated_at "MMM Do YYYY"}}</time>
