--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -22,10 +22,9 @@ $enable-flex: true;
 @import "node_modules/bootstrap/scss/media";
 // Utility classes
 @import "node_modules/bootstrap/scss/utilities";
-// Font Awesome
-@import 'node_modules/font-awesome/scss/font-awesome';
 
 // Custom Vendors
+@import 'vendors/fontello';
 @import 'vendors/bootstrap';
 @import 'vendors/angular';
 
