--- a/src/layouts/blog-post.hbs
+++ b/src/layouts/blog-post.hbs
@@ -3,11 +3,11 @@
 {{>head}}
 
 <body>
-	<div class="container-fluid px-0 [[bodyClasses]]">
+	<div class="container-fluid px-0">
 
 		{{>header}}
 
-		<main class="main" role="main" ui-view="main"></main>
+		<main id="main" class="main" role="main" ui-view="main"></main>
 		<script type="text/ng-template" id="partials/{{path}}/">
 			<!-- BEGIN PARTIAL partials/{{path}}/index.html -->
 			<article class="container">
@@ -31,7 +31,7 @@
 			<!-- END PARTIAL -->
 		</script>
 
-		{{>footer}}
+		{{>footer bodyClasses='blog-post'}}
 
 	</div>
 </body>
