Used `pushed_at` for project dates

--- a/src/layouts/projects-index.hbs
+++ b/src/layouts/projects-index.hbs
@@ -34,7 +34,7 @@
 													<i class="icon-fork"></i> {{forks_count}}
 												</div>
 												<div class="d-inline mr-1">
-													Updated <time class="time" datetime="{{moment updated_at "YYYY-MM-DD"}}">{{moment updated_at "MMM Do YYYY"}}</time>
+													Updated <time class="time" datetime="{{moment pushed_at "YYYY-MM-DD"}}">{{moment pushed_at "MMM Do YYYY"}}</time>
 												</div>
 											</div>
 										</div>
