--- a/src/layouts/partials/head.hbs
+++ b/src/layouts/partials/head.hbs
@@ -10,6 +10,12 @@
 	<link rel="canonical" href="{{site.url}}{{#if path}}{{path}}/{{/if}}">
 	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+	<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="theme-color" content="#000000">
+
 	{{#if styles}}
 		{{#each styles}}
 			<link rel="stylesheet" href="/{{this}}" media="all">
