Repo link added to footer

--- a/src/layouts/partials/footer.hbs
+++ b/src/layouts/partials/footer.hbs
@@ -11,6 +11,10 @@
 						</li>
 					{{/each}}
 				</ul>
+				<small>
+					<a href="https://github.com/ReedD/dadoune.com">This site is open source on GitHub!</a>
+				</small>
+				<br>
 				<small class="copyright">&copy; 2012-{{moment now "YYYY"}} Reed Dadoune</small>
 			</div>
 		</div>
