--- a/src/assets/sass/styles.scss
+++ b/src/assets/sass/styles.scss
@@ -20,6 +20,7 @@ $enable-flex: true;
 // Components
 @import "node_modules/bootstrap/scss/pagination";
 @import "node_modules/bootstrap/scss/media";
+@import "node_modules/bootstrap/scss/alert";
 // Utility classes
 @import "node_modules/bootstrap/scss/utilities";
 
