--- a/src/layouts/blog-post.hbs
+++ b/src/layouts/blog-post.hbs
@@ -25,7 +25,9 @@
 								{{{contents}}}
 							</div>
 							{{#if site.disqus}}
-								<disqus />
+								<div class="comments">
+									<disqus />
+								</div>
 							{{/if}}
 						</div>
 					</div>
