--- a/src/layouts/blog-post.hbs
+++ b/src/layouts/blog-post.hbs
@@ -26,7 +26,7 @@
 							</div>
 							{{#if site.disqus}}
 								<div class="comments">
-									<disqus />
+									<disqus-comments />
 								</div>
 							{{/if}}
 						</div>
