--- a/src/layouts/blog-post.hbs
+++ b/src/layouts/blog-post.hbs
@@ -12,7 +12,7 @@
 		<script type="text/ng-template" id="partials/{{path}}/">
 			<!-- BEGIN PARTIAL partials/{{path}}/index.html -->
 			<article class="container">
-				<div class="row flex-items-xs-center">
+				<div class="row justify-content-center">
 					<div class="col-md-12 col-lg-8">
 						<h1 class="h2">{{title}}</h1>
 						<h2 class="subtitle">{{subtitle}}</h2>
