--- a/src/layouts/partials/footer.hbs
+++ b/src/layouts/partials/footer.hbs
@@ -1,10 +1,10 @@
-<footer class="footer p-1 text-muted">
+<footer class="footer p-3 text-muted">
 	<div class="container">
-		<div class="row flex-items-xs-center">
-			<div class="col-md-12 col-lg-8 text-xs-center">
+		<div class="row justify-content-center">
+			<div class="col-md-12 col-lg-8 text-center">
 				<ul class="list-inline m-0">
 					{{#each site.social}}
-						<li class="list-inline-item mx-1">
+						<li class="list-inline-item mx-3">
 							<a class="icon" title="{{title}}" href="{{link}}">
 								<i class="{{icon}}"></i>
 							</a>
