--- a/src/layouts/projects-index.hbs
+++ b/src/layouts/projects-index.hbs
@@ -11,29 +11,29 @@
 		<script type="text/ng-template" id="partials/{{path}}/">
 			<!-- BEGIN PARTIAL partials/{{path}}/index.html -->
 			<div class="container">
-				<div class="row flex-items-xs-center">
+				<div class="row justify-content-center">
 					<div class="col-md-12 col-lg-8">
-						<ul class="media-list">
+						<ul class="list-unstyled">
 							{{#each repos}}
 								{{#unless fork}}
-									<li class="media mb-1" offline>
-										<div class="media-body media-middle">
+									<li class="media mb-3" offline>
+										<div class="media-body align-self-center">
 											<div class="media-heading h5">
 												<a href="{{html_url}}">{{name}}</a>
 											</div>
 											<div class="subtitle h6">{{description}}</div>
 											<div class="meta">
-												<div class="d-inline mr-1">
+												<div class="d-inline mr-3">
 													<div class="repo-language-color" style="background-color: {{lookup ../colors language}}"></div>
 													&nbsp;{{language}}
 												</div>
-												<div class="d-inline mr-1">
+												<div class="d-inline mr-3">
 													<i class="icon-star"></i> {{stargazers_count}}
 												</div>
-												<div class="d-inline mr-1">
+												<div class="d-inline mr-3">
 													<i class="icon-fork"></i> {{forks_count}}
 												</div>
-												<div class="d-inline mr-1">
+												<div class="d-inline mr-3">
 													Updated <time class="time" datetime="{{moment pushed_at "YYYY-MM-DD"}}">{{moment pushed_at "MMM Do YYYY"}}</time>
 												</div>
 											</div>
