--- a/src/assets/sass/base/_global.scss
+++ b/src/assets/sass/base/_global.scss
@@ -1,13 +1,13 @@
 body > .container-fluid,
 body > .container {
 	display: flex;
-	min-height: 100vh;
 	flex-direction: column;
+	min-height: 100vh;
 }
 
 .header {
-	display: flex;
 	background-color: $gray-lighter;
+	display: flex;
 	padding: 1rem 0 1.5rem;
 }
 
@@ -40,19 +40,19 @@ body > .container {
 	font-weight: 100;
 }
 
-/* Common styles for all menus */
+// Common styles for all menus
 .menu {
 	line-height: 1;
 	margin: 0 auto;
 }
 
 .menu__list {
-	position: relative;
 	display: flex;
 	flex-wrap: wrap;
+	list-style: none;
 	margin: 0;
 	padding: 0;
-	list-style: none;
+	position: relative;
 
 	@media (max-width: $menu-break-width) {
 		display: block;
@@ -66,21 +66,21 @@ body > .container {
 }
 
 .menu__link {
+	cursor: pointer;
+	display: block;
 	font-size: 1rem;
 	font-weight: bold;
-	display: block;
 	padding: 1rem;
-	cursor: pointer;
 	user-select: none;
 
 	&:hover,
 	&:focus {
-		text-decoration: none;
 		outline: none;
+		text-decoration: none;
 	}
 }
 
-/* Underbar */
+// Underbar
 .menu--underbar {
 
 	.menu__item {
@@ -88,11 +88,11 @@ body > .container {
 	}
 
 	.menu__link {
-		width: 120px;
+		color: $gray-dark;
 		height: 3rem;
 		text-align: center;
-		color: $gray-dark;
 		transition: color 0.3s;
+		width: 120px;
 
 		&:hover,
 		&:focus {
@@ -106,29 +106,29 @@ body > .container {
 	}
 
 	.menu__line {
-		position: absolute;
-		top: 100%;
-		left: 0;
-		width: 120px;
-		height: 2px;
-		margin-top: -2px;
-		pointer-events: none;
+		background: $brand-primary;
 		border: 1px solid $gray-lighter;
 		border-width: 0 45px;
-		background: $brand-primary;
+		height: 2px;
+		left: 0;
+		margin-top: -2px;
+		pointer-events: none;
+		position: absolute;
+		top: 100%;
 		transition: transform 0.5s;
 		transition-timing-function: cubic-bezier(1, 0.01, 0, 1.22);
+		width: 120px;
 
 		@media (max-width: $menu-break-width) {
-			top: 3rem;
-			position: absolute;
-			margin: auto;
+			border: 0;
 			left: 0;
-			right: 0;
+			margin: auto;
 			margin-left: auto;
 			margin-right: auto;
+			position: absolute;
+			right: 0;
+			top: 3rem;
 			width: 30px;
-			border: none;
 		}
 	}
 
